--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
 </head>
 <body onload="onGameInit()">
     <h1>💣Mine Sweeper!💣</h1>
+    <h2 class="click-meter">Clicks left: <span>50</span></h2>
     <table class="game-board" border="1"> </table>
-    <button class="reset-btn" onclick="onGameInit()">Restart</button>
+    <button class="reset-btn" onclick="restartGame()">😊</button>
     <hr>
     <button class="difficulty-easy" onclick="changeDifficulty('easy')">Easy Difficulty</button>
     <button class="difficulty-medium"onclick="changeDifficulty('medium')">Medium Difficulty</button>
@@ -17,6 +18,5 @@
 
     <script src="script.js"></script>
     <script src="utill.js"></script>
-
 </body>
 </html>
