--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <h2 class="click-meter">Clicks left: <span>50</span></h2>
     <table class="game-board" border="1"> </table>
     <button class="reset-btn" onclick="restartGame()">😊</button>
+    <p class="result-text"></p>
     <hr>
     <button class="difficulty-easy" onclick="changeDifficulty('easy')">Easy Difficulty</button>
     <button class="difficulty-medium"onclick="changeDifficulty('medium')">Medium Difficulty</button>
