--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 </head>
 <body onload="onGameInit()">
     <h1>💣Mine Sweeper!💣</h1>
+    <button class="dark-mode-btn" onclick="toggleDarkMode()">Dark Mode</button>
     <h2 class="click-meter">Clicks left: <span>50</span></h2>
+    <h2 class="flag-meter">Flag Count: <span></span></h2>
     <table class="game-board" border="1"> </table>
     <button class="reset-btn" onclick="restartGame()">😊</button>
     <p class="result-text"></p>
